<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:clickable="true" />

    <android.support.v7.widget.CardView
        android:visibility="gone"
        android:id="@+id/supportCardView"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/textViewMapsActivityTaxiWindowTaxiTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textViewMapsActivityTaxiWindowTaxiName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/mapsActivityTextViewTaxiName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textViewMapsActivityTaxiWindowCost"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/mapsActivityTextViewCostPerKm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textViewMapsActivityTaxiWindowDriverName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/mapsActivityTextViewDriverName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/textViewMapsActivityTaxiWindowUserTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textViewMapsActivityTaxiWindowUserPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editTextMapsActivityTaxiWindowUserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editTextMapsActivityTaxiWindowUserPhoneNumber" />

            <Button
                style="?attr/buttonBarButtonStyle"
                android:id="@+id/buttonMapsActivityTaxiWindowRefreshPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/buttonMapsActivityTaxiWindowRefreshMyPosition" />

            <Button
                style="?attr/buttonBarButtonStyle"
                android:id="@+id/buttonMapsActivityTaxiWindowGetTaxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/buttonMapsActivityTaxiWindowGetTaxi" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
